# MediaPlayer

./: .clang-format  CMakeLists.txt  mediafilessearchengine.cpp  mediafilessearchengine.h  player.cpp  player.h  playerconctrols.cpp  playercontrols.cpp  playercontrols.h  playlistcontextmenu.cpp  playlistcontextmenu.h  playlisthandler.cpp  playlisthandler.h  playlistmodel.cpp  playlistmodel.h
Headers/: frequencyspectrum.h  mediafilessearchengine.h  player.h  playercontrols.h  playlistcontextmenu.h  playlisthandler.h  playlistmodel.h  public.h  spectrum.h  spectrumanalyser.h  spectrumengine.h  treeitem.h  treemodel.h
Resource/: resource.qrc
Sources/: frequencyspectrum.cpp  main.cpp  mediafilessearchengine.cpp  player.cpp  playercontrols.cpp  playlistcontextmenu.cpp  playlisthandler.cpp  playlistmodel.cpp  spectrumanalyser.cpp  spectrumengine.cpp  treemodel.cpp
fftreal/: CMakeLists.txt
